JC-5 - More clean up and refactoring